<resources>
    <string name="app_name">SpaceX</string>
    <string name="empty" />
    <string name="launch_detail">Launch Detail</string>
    <string name="all_launches">All Launches</string>
    <string name="alert_api_error">API Error</string>
    <string name="alert_check_internet_msg">Please check the internet, if checking again has the same issue will close the app.</string>
    <string name="bottom_dialog_title">Sort by:</string>
    <string name="lb_sort_flight_number">Flight number: newest</string>
    <string name="lb_reversed_flight_number">Flight number: oldest</string>
    <string name="lb_api_unknown_error">Unknown error</string>
    <string name="lb_flight_number">Flight number</string>
    <string name="lb_mission_name">Mission name</string>
    <string name="lb_launch_local_date">Launch Local date</string>
    <string name="lb_launch_site">Launch site</string>
    <string name="cp_flight_number">Flight %s</string>
    <string name="btn_confirm">Confirm</string>
    <string name="btn_cancel">Cancel</string>
</resources>