<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="vm"
            type="com.example.spacex.ui.all_launches.bottom_sheet_dialog.SortBottomSheetDialogViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvDialogTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/bottom_dialog_title"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/vDivider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="@color/primary_dark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDialogTitle" />

        <RadioGroup
            android:id="@+id/rgSortType"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/vDivider">

            <RadioButton
                android:id="@+id/rbtnSort"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="@{vm.isSort}"
                android:onClick="@{v -> vm.onClick(v)}"
                android:padding="8dp"
                android:text="@string/lb_sort_flight_number"
                android:textSize="16sp"
                tools:checked="true" />

            <RadioButton
                android:id="@+id/rbtnReversed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="@{vm.isReversed}"
                android:onClick="@{v -> vm.onClick(v)}"
                android:padding="8dp"
                android:text="@string/lb_reversed_flight_number"
                android:textSize="16sp" />
        </RadioGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>